--- a/Life_Expectancy_WHO.ipynb
+++ b/Life_Expectancy_WHO.ipynb
@@ -592,7 +592,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Data by Spain from 2000 to 2015"
+        "#Data of Spain from 2000 to 2015"
       ],
       "metadata": {
         "id": "6cwZtcdtSm8C"
